Top section fixed on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,17 +18,16 @@
 }
 
 .centerplz {
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
+.hats {
 
-.mocenter {
-    margin-left: 25%;
-    max-width: 50%;
-    min-width: 50%;
-    margin-right: 25%;
+    width: 110%;
+
 }
+
 
 .motech {
     margin-left: 25%;
