--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
-/* .container {
-  overflow-x:hidden;
-  width:100%;
-  position:relative;
-  top:7vh;
-  height:53vh;}
-.main {
-  top:0;
-} */
+
 
 
 .body {
